# ros_copter

./: CMakeLists.txt  package.xml
cfg/: gains.cfg
include/controller/: controller.h
include/ekf/: ekf.h
include/mono_vo/: mono_vo.h
include/teleop/: joy.h  key_teleop.h
include/velocity_control/: velocity_control.h
launch/: bag.launch  hardware.launch  simulator_test.launch  teleop.launch  test.launch
params/: camera.yaml  estimator.yaml  gains.yaml
scripts/: teleop_key.py
src/controller/: controller.cpp  controller_node.cpp
src/ekf/: ekf.cpp
src/mono_vo/: mono_vo.cpp
src/teleop/: joy.cpp  rc_joy.cpp
src/velocity_control/: velocity_control.cpp  velocity_control_node.cpp
